# foc_libraries

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  allocator.h  array_ref.h  hash_array_mapped_trie.h  hash_array_mapped_trie_test.cpp  hash_array_mapped_trie_test_helpers.h  none.h  prelude.cmake  small_vector.h  small_vector_test.cpp  sqlkit.cpp  sqlkit.h  sqlkit_test.cpp  support.h  test_classes.h
foc/: allocator.h  array_ref.h  debugger.h  hash_array_mapped_trie.h  logging.h  none.h  small_vector.h  support.h
test/: CMakeLists.txt  hash_array_mapped_trie_test.cpp  hash_array_mapped_trie_test_helpers.h  logging_test.cpp  small_vector_test.cpp  test_classes.h
